@@ -72,7 +72,7 @@ before_install:
 install:
   - "python scripts/bootstrap.py --script-dependencies"
   - CFLAGS="-O0" python scripts/bootstrap.py --pip-installs
-  - "travis/setupTestPostgresql.sh"
+  - "reahl-control createdb reahl-web/etc"
   - "reahl setup -sX -- develop -N"
 
 before_script:
