@@ -2,7 +2,7 @@
 from __future__ import print_function, unicode_literals, absolute_import, division
 
 reahlsystem.root_egg = 'reahl-doc'
-reahlsystem.connection_uri = 'postgresql://rhug:rhug@localhost/rhug'
+reahlsystem.connection_uri = 'postgresql:///reahl'
 #reahlsystem.connection_uri = 'sqlite:////tmp/hj.db'
 #reahlsystem.connection_uri = 'sqlite:///:memory:'
 #reahlsystem.debug = True
